# token_generator

./: Cargo.toml  README.md
src/: main.rs
